force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__AmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountInclTaxLocal__c</fullName>
    <label>AMOUNT INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>