force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__AmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountInclTaxUSD__c</fullName>
    <label>AMOUNT INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>