force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__Approver__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuoteApprover</relationshipName>
    <type>Lookup</type>
</CustomField>