force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__AttentionPriorityNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AttentionPriorityNumber__c</fullName>
    <label>Attention Priority(Number)</label>
    <summarizedField>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__AttentionPriorityNumberRollup__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__QuoteID__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>