force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__CntrTypeQnty__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CntrTypeQnty__c</fullName>
    <label>CONTAINER TYPE*QUANTITY</label>
    <type>TextArea</type>
</CustomField>