force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__ContainerType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerType__c</fullName>
    <label>CONTAINER TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerType</valueSetName>
    </valueSet>
</CustomField>