force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__Department__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Department</valueSetName>
    </valueSet>
</CustomField>