force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__DocOperator__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DocOperator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Operator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>