force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__ETA__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ETA__c</fullName>
    <label>ETA</label>
    <type>Date</type>
</CustomField>