force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRateID__c</fullName>
    <label>EXCHANGE RATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>