force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__ForwardingServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ForwardingServiceRequired__c</fullName>
    <label>Forwarding Service Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ForwardingServiceRequired</valueSetName>
    </valueSet>
</CustomField>