force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__Frequency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Frequency__c</fullName>
    <label>FREQUENCY</label>
    <type>TextArea</type>
</CustomField>