force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__Incoterms__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Incoterms__c</fullName>
    <label>INCOTERMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Incoterms</valueSetName>
    </valueSet>
</CustomField>