force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__mm_CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_CompanyAddress__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Address__c</formula>
    <label>MAIL MERGE COMPANY ADDRESS</label>
    <type>Text</type>
</CustomField>