force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__mm_CompanyFax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_CompanyFax__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Fax__c</formula>
    <label>MAIL MERGE COMPANY FAX</label>
    <type>Text</type>
</CustomField>