force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__mm_QuotePICEmail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_QuotePICEmail__c</fullName>
    <formula>clofor_com_cfs__QuotePIC__r.Email</formula>
    <label>MAIL MERGE QUOTE PIC EMAIL</label>
    <type>Text</type>
</CustomField>