force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__mm_QuotePICPhone__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_QuotePICPhone__c</fullName>
    <formula>clofor_com_cfs__QuotePIC__r.Phone</formula>
    <label>MAIL MERGE QUOTE PIC PHONE</label>
    <type>Text</type>
</CustomField>