force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__mm_RequesterEmail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_RequesterEmail__c</fullName>
    <formula>clofor_com_cfs__PICOfRequesterCompany__r.Email</formula>
    <label>MAIL MERGE REQUESTER EMAIL</label>
    <type>Text</type>
</CustomField>