force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__mm_RequesterMobile__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_RequesterMobile__c</fullName>
    <formula>clofor_com_cfs__PICOfRequesterCompany__r.MobilePhone</formula>
    <label>MAIL MERGE REQUESTER MOBILE</label>
    <type>Text</type>
</CustomField>