force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__mm_RequesterPhone__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_RequesterPhone__c</fullName>
    <formula>clofor_com_cfs__PICOfRequesterCompany__r.Phone</formula>
    <label>MAIL MERGE REQUESTER PHONE</label>
    <type>Text</type>
</CustomField>