force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__Monthtest__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Monthtest__c</fullName>
    <formula>If(
(clofor_com_cfs__ETA__c - clofor_com_cfs__ETD__c)/365*12&lt;1,1, (clofor_com_cfs__ETA__c - clofor_com_cfs__ETD__c)/365*12
)</formula>
    <label>Monthtest</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>