force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__NumberofQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberofQuoteLine__c</fullName>
    <label>Number of Quote Line</label>
    <summaryFilterItems>
        <field>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__Print__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__QuoteID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>