force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__ProfitRatioInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitRatioInclTaxLocal__c</fullName>
    <label>PROFIT RATIO INCL TAX(LOCAL)%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>