force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__QuotationClosing__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QuotationClosing__c</fullName>
    <label>Quotation Closing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>