force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__QuoteIssueDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QuoteIssueDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>QUOTE ISSUE DATE</label>
    <type>Date</type>
</CustomField>