force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__Reviewer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuoteReviewer</relationshipName>
    <type>Lookup</type>
</CustomField>