force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__RollupSellingAmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupSellingAmountInclTaxUSD__c</fullName>
    <label>ROLLUP SELLING AMOUNT INCL TAX(USD)</label>
    <summarizedField>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__SellingAmountInclTaxUSD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>