force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__SignandSignature__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SignandSignature__c</fullName>
    <label>Sign and Signature</label>
    <type>TextArea</type>
</CustomField>