force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__Sum_Rollup_Selling_Amount_incl_Tax_FCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Sum_Rollup_Selling_Amount_incl_Tax_FCY__c</fullName>
    <label>Sum Rollup Selling Amount incl Tax(FCY)</label>
    <summarizedField>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__Selling_Amount_incl_Tax_FCY_For__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>