force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__Sum_Total_Amount_of_Selling_Local__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Sum_Total_Amount_of_Selling_Local__c</fullName>
    <label>Sum Total Amount of Selling(Local)</label>
    <summarizedField>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__Total_Amount_of_Selling_Local_For__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>