force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__SumSellingAmountinclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SumSellingAmountinclTaxFCY__c</fullName>
    <label>Sum Selling Amount incl Tax(FCY)</label>
    <summarizedField>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__SellingAmountinclTaxFCYFor__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__QuoteLine__c.clofor_com_cfs__QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>