force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__TotalAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountLocal__c</fullName>
    <label>TOTAL AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>