force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/clofor_com_cfs__VesselFlight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VesselFlight__c</fullName>
    <label>VESSEL/FLIGHT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>