force-app/main/default/objects/clofor_com_cfs__Quote__c/fields/RouteRequest__c.field-meta.xml
<CustomField>
    <fullName>RouteRequest__c</fullName>
    <label>Route Request</label>
    <type>TextArea</type>
</CustomField>