force-app/main/default/objects/clofor_com_cfs__Quote__c/recordTypes/clofor_com_cfs__AirLogisticsServiceQuote.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__AirLogisticsServiceQuote</fullName>
    <active>true</active>
    <description>Service Quote Line for Air Logistics Service</description>
    <label>Air Logistics Service Quote</label>
</RecordType>