force-app/main/default/objects/clofor_com_cfs__Quote__c/recordTypes/clofor_com_cfs__DomesticLogisticsServiceQuote.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__DomesticLogisticsServiceQuote</fullName>
    <active>true</active>
    <description>Service Quote Line for Domestic Logistics Service</description>
    <label>Domestic Logistics Service Quote</label>
</RecordType>